--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -13,4 +13,5 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
+build_test("${prefix}" source_coordinate)
 add_subdirectory(lexer)
